--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,2 @@
-machine:
-  node:
-    version: 6.7.0
-test:
-  override:
-    - ./node_modules/.bin/htmllint {*.html,./!(node_modules)/**/*.html}
-    - ./node_modules/.bin/stylelint ./**/*.css
+general:
+  build_dir: api
